# coin-detection-CV

./: Makefile  README.md  pyproject.toml
coin_detection/: object_extraction.py
